ExampleManifest/kyverno_test_policies-main/Kyverno/add-web-acl-baseline.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: add-web-acl-annotation
spec:
  rules:
  - name: "add-web-acl-annotation"
    match:
      all:
      - resources:
          annotations: 
            kubernetes.io/ingress.class: "alb"
          kinds:
          - Ingress
    mutate:
      patchStrategicMerge:
        metadata:
          annotations:
            +(alb.ingress.kubernetes.io/wafv2-acl-arn): "WEB_ACL_ARN"
